--- a/src/pug/chunk/main.pug
+++ b/src/pug/chunk/main.pug
@@ -9,7 +9,7 @@ section.basic
     .container 
         .row.basic__wrapper
             .col-10.col-xl-12.basic__content
-                p.maintext.maintext__roundel В мире дизайна мы сделали выбор в пользу Adobe, оставив за бортом формат CorelDraw. Давайте разберем, почему именно Adobe стал нашим надежным союзником в творчестве.
+                p.maintext.maintext--roundel В мире дизайна мы сделали выбор в пользу Adobe, оставив за бортом формат CorelDraw. Давайте разберем, почему именно Adobe стал нашим надежным союзником в творчестве.
 
                 ol.basic__list
                     li.maintext.basic__list-item Adobe - это компания, представляющая широкий спектр продуктов, среди которых вы, вероятно, знакомы с основными:
@@ -36,7 +36,7 @@ section.basic
 
                             p.basic__subtext а также более 90 других продуктов
                             
-                    .basic__subblock
+                    li.basic__subblock
                         p.maintext Более тысячи специалистов по всему миру активно участвуют в разработке и обеспечивают высокое качество продуктов и их разнообразные возможности.
                         p.maintext В то время как CorelDraw ограничивается только CorelDraw.
 
@@ -44,17 +44,17 @@ section.basic
 
                     li.maintext.basic__list-item Главный недостаток CorelDraw заключается в преобразовании документа во внутренний формат bitmap. Это особенно заметно при обработке растровых изображений, где могут возникнуть различные артефакты, такие как неожиданные грани, изменение цветов или полная инверсия изображения.
 
-                    .basic__popups
+                    li.basic__popups
                         .basic__popup
                             img(src="img/popup1.jpg", alt="Произошла внутренняя ошибка фильтра")
 
                         .basic__popup
                             img(src="img/popup2.jpg", alt="Указанный формат данных недоступен")
 
-                    .basic__subblock.basic__subblock--offset
+                    li.basic__subblock.basic__subblock--offset
                         p.maintext В отличие от этого, Illustrator лишен подобных неожиданностей и обладает полной совместимостью с форматами PDF и EPS, необходимыми для полиграфии. Важно отметить, что, несмотря на возможность сохранения файлов в формате PDF, CorelDraw плохо распознает PDF файлы, что может привести к потере некоторых элементов макета. Поэтому при подготовке макета для офсетной полиграфии Illustrator остается оптимальным выбором.
 
-                    .pdf
+                    li.pdf
                         .pdf__ai
                             .pdf__item 
                                 img(src="img/pdfitem1.jpg", alt="PDF-страница в Иллюстраторе")
